# proteus_life_simulation

./: .env.example  .gitignore  DOCKER_README.md  Dockerfile  INFORME_PROTEUS_AGI.md  INSTRUCCIONES_PYTHON_BACKEND.md  LICENSE  Makefile  PROTEUS-AC-README.md  PROTEUS-AC-Sprint2.md  PROTEUS-AC-Sprint3.md  PROTEUS_ARC_RESULTS.md  README-WEB.md  README.md  README_DOCKER.md  RESPONSE_TO_EXTERNAL_ANALYSIS.md  arc_evaluation_results.json  build-simple.sh  deeplearning-physics-word.ipynb  docker-compose.override.yml.example  docker-compose.simple.yml  docker-compose.web.yml  docker-compose.yaml  docker-compose.yml  fix-docker.sh  main.py  physics_simulation.py  proteus-readme.md  pyproject.toml  requirements.txt  run-docker.sh  setup.py  start-frontend-dev.sh  start-network.sh  start-services-intranet.sh  start-services.sh  test_arc_load.py  visual_demo.py  visual_demo_docker.py
backend/: .env.example  Dockerfile  Dockerfile.minimal  Dockerfile.simple  NEXT_STEPS_DEEP_LEARNING.md  README.md  SYSTEM_OVERVIEW.md  TOPOLOGICAL_EVOLUTION.md  arc_evaluation_results.json  arc_vjepa_memory.pkl  build-no-cache.sh  compare_systems.py  debug_transformations.py  docker-compose.yml  docker-manual-build.sh  entrypoint.sh  evaluate_arc_official.py  evaluate_arc_score.py  evaluate_reasoning_network.py  main.py  main_reasoning.py  proteus_vispy.py  requirements-torch.txt  requirements.txt  run_local.sh  run_server.py  run_vispy.py  start-backend-dev.sh  start_unified.sh  test_arc_debug.py  test_arc_final.py  test_arc_official.py  test_arc_performance.py  test_arc_with_hierarchy.py  (+14 more)
(+224 files in other folders)
