[tool.poetry]
name = "proteus"
version = "0.1.0"
description = "Computación sin Neuronas - Inteligencia desde Dinámicas Topológicas"
authors = ["Proteus Research Team <proteus@research.org>"]
readme = "proteus-readme.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
scipy = "^1.10.0"
matplotlib = "^3.7.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
tqdm = "^4.65.0"
plotly = "^5.14.0"
imageio = "^2.31.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
ipython = "^8.14.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"